# ruff-droids

./: .gitignore  README.md  main.py  pyproject.toml
src/ruff_droids/: __init__.py  cli.py  orchestrator.py
test_repo/: bad_imports.py  bad_style.py  missing_docstrings.py  mixed_issues.py
tests/: test_ruff_fix.py
