[project]
name = "ruff-droids"
version = "0.1.0"
description = "Orchestrator CLI tool for ruff fixes with Factory AI droids"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
]

[project.scripts]
ruff-droids = "ruff_droids.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",
  "D213",
  "S101",
  "T201"
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
